--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "@langchain/community": "^0.3.45",
     "@langchain/openai": "^0.5.11",
     "@supabase/supabase-js": "^2.49.8",
-    "dotenv": "^16.5.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonrepair": "^3.12.0"
   }
 }
